<resources>
    <string name="app_name">WeSnap</string>
    <string name="emotion_key">00f71c01dc6a4c69a76bf6322e6abd17</string>

    <!--Geneal-->
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_set">Set</string>
    <string name="action_send">Send</string>
    <string name="action_loading">Loading</string>
    <string name="action_exit_app">Exit App</string>
    <string name="status_not_found">Not Found</string>
    <string name="status_no_result">No Results</string>

    <!--Auth-->
    <string name="text_title_login">Log In</string>
    <string name="text_title_register">Create your WeSnap account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_display_name">Your Name</string>
    <string name="hint_device_name">Device Name</string>
    <string name="hint_mac_address">MAC Address</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="status_empty"> </string>
    <string name="status_auth_failed">authentication failed</string>
    <string name="status_register_failed">register failed</string>
    <string name="action_logout">Logout</string>

    <!--Friends-->
    <string name="action_view_friends">My Friends</string>
    <string name="action_view_requests">Added Me</string>
    <string name="action_add_friends">Add Friends</string>
    <string name="action_search_username">Search Friends</string>
    <string name="action_share_username">Share My Username</string>
    <string name="action_share_username_to">Share my username to ...</string>
    <string name="action_other_options">Search Nearby</string>
    <string name="text_paired_title">Paired Devices</string>
    <string name="text_discover_title">Discovered Devices</string>
    <string name="text_connected_title">Friend Request has been sent.</string>

    <!--Messages-->
    <string name="action_search_my_friends">Search My Friends</string>
    <string name="action_chat_with">Chat with ...</string>
    <string name="hint_chat_name">Your Friend Alice from Wonderland</string>
    <string name="hint_chat">Tap to read messages!</string>
    <string name="hint_message">text message</string>
    <string name="action_upload_photo">Upload Photo from Local</string>
    <string name="action_view_photo">See the Photo</string>
    <string name="action_replay_photo">Replay the Photo</string>

    <!--Camera-->
    <string name="action_camera">Start Camera</string>
    <string name="text_title_camera">It\'s SNAP TIME</string>
    <string name="action_edit_photo">Edit Photo</string>
    <string name="text_current_photo_path">Current Path</string>
    <string name="action_draw_freehand">Freehand Draw</string>
    <string name="action_draw_emoji">Emoji Draw</string>
    <string name="action_draw_text">Text Draw</string>
    <string name="action_save_to_memory">Save to memory</string>
    <string name="action_save_to_story">Save to story</string>
    <string name="action_set_timer">Set timer</string>
    <string name="value_default_ttl">3</string>
    <string name="text_draw_text_tip">Please touch the Image to set position.</string>

    <!--Stories-->
    <string name="text_title_my_stories">My Stories</string>
    <string name="text_title_official_stories">Public Stories</string>
    <string name="text_title_subscriptions">Subscriptions</string>
    <string name="text_title_friends_stories">Stories by Friends</string>
    <string name="text_title_live_stories">Live Stories</string>
    <string name="text_title_discover">Discover</string>
    <string name="hint_time_ago">xx hours ago</string>
    <string name="text_just_now">just now</string>
    <string name="text_hour_ago">%1$d hour ago</string>
    <string name="text_hours_ago">%1$d hours ago</string>
    <string name="text_author_name">%1$s</string>
    <string name="action_search_official_stories">Search</string>
    <string name="action_discover_official_stories">Discover</string>
    <string name="text_story_title">Title: Tomorrow is tomorrow</string>
    <string name="text_story_source">Source: NYT</string>
    <string name="text_story_keyword">Keyword: Books</string>
    <string name="text_story_keyword_var">#%1$s</string>
    <string name="action_import_official_stories">Import New Stories</string>
    <string name="action_read_story">Read More</string>
    <string name="action_similar">Read Similar</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_search_official">Search Public Stories</string>

    <!--Memories-->
    <string name="action_my_memories">My Memories</string>
    <string name="action_import_local">Import from Camera Roll</string>
    <string name="action_delete_memory">Delete Memory</string>
    <string name="action_share_memory">Share Memory</string>
    <string name="action_share_memory_to">Share photo to ...</string>
    <string name="action_lock_memory">Lock Memory (For My Eye Only)</string>
    <string name="action_create_story">Create Story</string>

    <!--Photos-->
    <string name="action_show_photo">Show Photo</string>
    <string name="text_photo_countdown">%1$d</string>

    <!--Dummy-->
    <string name="text_dummy">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
        culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="desc_tab_icon">Icon of Tab</string>
    <string name="desc_image_avatar">Avatar of User</string>
    <string name="desc_message_sender">Color Bar for Message Sender</string>
    <string name="desc_image_memory">Image for Memory</string>
    <string name="desc_image_story">Image for Story</string>

</resources>
