<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tip"
        android:text="@string/text_draw_text_tip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/iv_show"
            android:contentDescription="@string/text_current_photo_path"
            android:visibility="visible">
        </ImageView>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_text"
        android:maxLength="50"
        android:inputType="text"
        android:textAlignment="center"
        android:text="@string/action_draw_text"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_buttons"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_clear"
            android:layout_weight="1"
            android:text="@string/action_clear"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/bt_set"
            android:layout_weight="1"
            android:text="@string/action_set"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

    </LinearLayout>
</LinearLayout>