<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text_title_login"
        android:text="@string/text_title_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!--Login-->
        <LinearLayout
            android:id="@+id/ui_group_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <!-- Email Field -->
            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"/>

            <!-- Password Field -->
            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAlignment="center"/>

            <!-- Login Button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login"
                android:layout_gravity="center_horizontal"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

            <!-- Register Button -->
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:layout_gravity="center_horizontal"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>
        </LinearLayout>

        <!--Register-->
        <LinearLayout
            android:id="@+id/ui_group_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <!-- Username Field -->
            <EditText
                android:id="@+id/field_username_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textAlignment="center" />

            <!-- Display Name Field -->
            <EditText
                android:id="@+id/field_display_name_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_display_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/field_email_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/field_password_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <!-- Submit Button -->
                <Button
                    android:id="@+id/register_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_submit"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>

                <!-- Cancel Button -->
                <Button
                    android:id="@+id/register_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_cancel"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>