<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/size_edges">

    <ImageView
        android:id="@+id/avatar_request"
        android:contentDescription="@string/desc_image_avatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="@dimen/size_avatar"
        android:layout_height="@dimen/size_avatar"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_avatar"
        android:layout_toRightOf="@+id/avatar_request"
        android:layout_toEndOf="@+id/avatar_request"
        android:layout_toLeftOf="@+id/button_request"
        android:layout_toStartOf="@+id/button_request"
        android:layout_marginLeft="@dimen/size_edges"
        android:layout_marginStart="@dimen/size_edges"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name_request"
            android:hint="@string/hint_display_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceListItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_email_request"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceListItemSmall" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_request"
        android:src="@drawable/ic_action_add_friend"
        android:tint="@color/colorPrimary"
        android:contentDescription="@string/action_search_username"
        android:layout_width="@dimen/size_avatar"
        android:layout_height="@dimen/size_avatar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        style="@style/Widget.AppCompat.Button.Borderless" />
</RelativeLayout>
