<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_avatar"
            android:src="@drawable/avatar_default_1"
            android:contentDescription="@string/desc_image_avatar"
            android:layout_width="@dimen/size_photo_message"
            android:layout_height="@dimen/size_photo_message"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/my_name"
            android:hint="@string/hint_display_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="@dimen/size_edges"/>

        <TextView
            android:id="@+id/my_username"
            android:hint="@string/hint_username"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="@dimen/size_edges"
            android:layout_marginBottom="@dimen/size_edges"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">
        <!-- Add Friends Button -->
        <Button
            android:id="@+id/button_add_friends"
            android:text="@string/action_add_friends"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/ic_action_add_friend_blue"
            android:drawablePadding="@dimen/size_edges_small"
            android:typeface="sans"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle" />

        <!-- View Friend Requests Button -->
        <Button
            android:id="@+id/button_view_requests"
            android:text="@string/action_view_requests"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/ic_action_view_requests"
            android:drawablePadding="@dimen/size_edges_small"
            android:typeface="sans"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle" />

        <!-- View Friends Button -->
        <Button
            android:id="@+id/button_view_friends"
            android:text="@string/action_view_friends"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/ic_action_view_friends"
            android:drawablePadding="@dimen/size_edges_small"
            android:typeface="sans"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</LinearLayout>