<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/size_edges">

    <ImageView
        android:id="@+id/chat_avatar"
        android:contentDescription="@string/desc_image_avatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="@dimen/size_avatar"
        android:layout_height="@dimen/size_avatar"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_avatar"
        android:layout_toRightOf="@+id/chat_avatar"
        android:layout_toEndOf="@+id/chat_avatar"
        android:layout_marginLeft="@dimen/size_edges"
        android:layout_marginStart="@dimen/size_edges"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chat_name"
            android:text="@string/hint_chat_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceListItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chat_hint"
            android:text="@string/hint_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceListItemSmall" />
    </LinearLayout>
</RelativeLayout>
