<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_title_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:hint="@string/hint_chat_name"
        android:textAppearance="?android:textAppearanceLargeInverse"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:layout_margin="@dimen/size_edges_small"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_edges" >

        <EditText
            android:id="@+id/field_text_message"
            android:hint="@string/hint_message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/button_send_message"
            android:src="@drawable/ic_action_send"
            android:contentDescription="@string/action_send"
            android:layout_width="@dimen/size_icon_tab"
            android:layout_height="@dimen/size_icon_tab"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

</LinearLayout>
